crates/elenchus-parser/tests/snapshots/errors__trailing_garbage_after_valid_program.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(\"FACT a b\\nCHECK a\\n??? leftover\\n\")"
---
Syntax Error at line 3, col 1: expected a statement (IMPORT/FACT/NOT/AXIOM/RULE/CHECK)
  | ??? leftover
  | ^--- here
